fixing missing nav - hidden by print

--- a/static/blog-style.css
+++ b/static/blog-style.css
@@ -25,11 +25,11 @@ html {
     padding-top: 0em !important;
 }
 @media print {
-    html, body {
+    html,
+    body {
         -webkit-filter: grayscale(100%);
         filter: grayscale(100%);
     }
-}
     nav,
     footer,
     #xmas,
